Fix image alignment

--- a/custom.css
+++ b/custom.css
@@ -14,7 +14,6 @@ body {
   align-self: center;
 }
 .article-image {
-  align-self: flex-end;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
